Update Docker build workflow for publishing logic
Refactor Docker build workflow to remove release trigger and simplify publish condition.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -7,9 +7,14 @@ on:
         required: true
         type: boolean
         default: false
+  workflow_call:
+    inputs:
+      publish:
+        description: 'Push images to Docker Hub'
+        required: true
+        type: boolean
+        default: false
   pull_request:
-  release:
-    types: [published]
 
 permissions: {}
 
@@ -48,14 +53,14 @@ jobs:
           REVIEW_VERSION: ${{ matrix.version }}
         run: |
           # Determine if we should publish to Docker Hub
-          if [ "${GITHUB_EVENT_NAME}" = "release" ] || [ "${INPUT_PUBLISH}" = "true" ]; then
+          if [ "${INPUT_PUBLISH}" = "true" ]; then
             echo "should_publish=true" >> "${GITHUB_OUTPUT}"
           else
             echo "should_publish=false" >> "${GITHUB_OUTPUT}"
           fi
           
           # Determine if we should push the base image tag
-          if [ "${GITHUB_EVENT_NAME}" = "release" ] || [ "${INPUT_PUBLISH}" = "true" ]; then
+          if [ "${INPUT_PUBLISH}" = "true" ]; then
             if [ "${REVIEW_VERSION}" = "latest" ]; then
               echo "should_push_base=true" >> "${GITHUB_OUTPUT}"
             else
