--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,3 +17,8 @@ jobs:
           persist-credentials: false
       - uses: ruby/setup-ruby@4c24fa5ec04b2e79eb40571b1cee2a0d2b705771 # v1.278.0
       - uses: rubygems/release-gem@1c162a739e8b4cb21a676e97b087e8268d8fc40b # v1.1.2
+
+  docker-build:
+    permissions:
+      contents: read
+    uses: ./.github/workflows/docker-build.yml
