Add docker-build job to release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,8 +20,10 @@ jobs:
       - uses: rubygems/release-gem@1c162a739e8b4cb21a676e97b087e8268d8fc40b # v1.1.2
 
   docker-build:
+    needs: publish
     permissions:
       contents: read
     uses: ./.github/workflows/docker-build.yml
     with:
       publish: true
+    secrets: inherit
