--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,7 @@ root = true
 indent_style = space
 indent_size = 4
 
-[*.rb]
+[*.{rb,gemspec}]
 charset = utf-8
 trim_trailing_whitespace = true
 indent_size = 2
