--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -7,7 +7,7 @@ COPY . /tmp/review-retrovert/
 # Build and install from local source
 RUN cd /tmp/review-retrovert && \
     gem build review-retrovert.gemspec && \
-    gem install review-retrovert-*.gem && \
+    gem install --no-document review-retrovert-*.gem && \
     rm -rf /tmp/review-retrovert
 
 ENTRYPOINT [ "review-retrovert" ]
