--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -90,7 +90,7 @@ jobs:
         uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6.18.0
         with:
           push: ${{ steps.conditions.outputs.should_push_base }}
-          load: true
+          load: ${{ steps.conditions.outputs.should_push_base == 'false' || steps.conditions.outputs.should_publish == 'true' }}
           file: Dockerfile.local
           build-args: |
             REVIEW_VERSION=${{ matrix.version }}
@@ -102,4 +102,8 @@ jobs:
           IMAGE_NAME: srzzumix/review-retrovert:${{ matrix.version }}
           DOCKER_REPO: srzzumix/review-retrovert
         run: |
+          # Pull the image if it was pushed but not loaded
+          if ! docker image inspect ${IMAGE_NAME} >/dev/null 2>&1; then
+            docker pull ${IMAGE_NAME}
+          fi
           ./hooks/post_push
