--- a/.github/workflows/tagpr.yml
+++ b/.github/workflows/tagpr.yml
@@ -16,6 +16,8 @@ jobs:
     - uses: actions/checkout@v6
       with:
         persist-credentials: false
+    - uses: ruby/setup-ruby@4c24fa5ec04b2e79eb40571b1cee2a0d2b705771 # v1.278.0
+    - run: bundle install
     - uses: Songmu/tagpr@fa7d23a4aada5ab0d15a76277a7e0b70d107a9c3 # v1.11.1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
